docroot/themes/custom/emulsifymars/components/01-atoms/video/inline-video/_video.scss
.inline-video {
  width: 100%;
  height: 100%;
  position: relative;

  button {
    font-size: 0;
  }

  video {
    width: 100%;
  }

  &__control[data-state="hidden"] {
    display: none;
  }

  &__control[data-state="play"] {
    @include playbutton;

    width: 97px;
    height: 97px;
    left: 10px;
    bottom: 25px;

    .play-icon {
      width: 30.2px;
      height: 36px;
      fill: clr(secondary);
      margin: auto 30%;
    }
  }

  &__control[data-state="pause"] {
    @include pausebutton;

    width: 97px;
    height: 97px;
    left: 10px;
    bottom: 30px;

    >div {
      width: 30.2px;
      height: 36px;
      border-right: 4px solid clr(text-inverse);
      border-left: 4px solid clr(text-inverse);
      margin: auto;
    }
  }

  &__control[data-state="pause"] .play-icon{
    display: none;
  }

  &__controls {
    overflow: hidden;
    background: transparent;
    width: 100%;
    min-height: 30px;
    position: relative;
    padding: 0 20px;

    @include medium {
      padding: 0 30px;
    }

    &[data-state="hidden"] {
      display: none;
    }

    &[data-state="visible"] {
      display: flex;
      align-items: center;
    }

    button {
      text-align: center;
      overflow: hidden;
      white-space: nowrap;
      text-overflow: ellipsis;
      border: none;
      outline: none;
      cursor: pointer;
      background: transparent;
      background-size: contain;
      background-repeat: no-repeat;
    }

    button:hover,
    button:focus {
      opacity: 0.5;
    }

    progress {
      display: block;
      width: 100%;
      height: 10px;
      border: none;
      overflow: hidden;
      -moz-border-radius: 2px;
      -webkit-border-radius: 2px;
      border-radius: 2px;
      color: clr(player);

      span {
        width: 0%;
        height: 10px;
        display: inline-block;
        background-color: clr(player);
      }

      &::-moz-progress-bar {
        background-color: clr(player);
      }

      &::-webkit-progress-value {
        background-color: clr(player);
      }
    }
  }

  &__playpause[data-state="play"] {
    @include playbutton;

    width: 30px;
    height: 30px;
    position: static;
    margin-right: 10px;

    @include medium {
      margin-right: 20px;
    }

    @include xl {
      margin-right: 30px;
    }

    .play-icon {
      width: 10px;
      height: 12px;
      fill: clr(secondary);
      margin: auto 35%;
    }
  }

  &__playpause[data-state="pause"] {
    @include pausebutton;

    width: 30px;
    height: 30px;
    position: static;
    margin-right: 10px;

    @include medium {
      margin-right: 20px;
    }

    @include xl {
      margin-right: 30px;
    }

    >div {
      width: 7px;
      height: 9px;
      border-right: 4px solid clr(text-inverse);
      border-left: 4px solid clr(text-inverse);
      margin: auto;
    }
  }

  button.inline-video__mute {
    margin-right: 10px;

    @include medium {
      margin-right: 20px;
    }

    @include xl {
      margin-right: 30px;
    }
  }

  button.inline-video__close {
    position: absolute;
    background: transparent;
    top: 20px;
    right: 20px;
    z-index: 10;
    text-align: center;
    overflow: hidden;
    white-space: nowrap;
    text-overflow: ellipsis;
    border: none;
    outline: none;
    cursor: pointer;
    padding: 0;
    width: 24px;
    height: 24px;

    @include medium {
      top: 40px;
      right: 40px;
    }

    @include xl {
      right: 60px;
    }
  }

  &__progress-time {
    cursor: pointer;
    flex-grow: 1;
    margin-right: 10px;
  }

  &__progress-time--duration {
    width: auto;
    flex-grow: 0;
    flex-basis: 80px;
    font-size: 14px;
    color: clr(text-inverse);
    margin-right: 10px;
    min-width: 11rem;

    @include medium {
      margin-right: 20px;
    }

    @include xl {
      margin-right: 30px;
    }
  }

  &__controls > button {
    display: block;
    background: transparent;
    padding: 0;
  }
}


/* hide full control */

figure[data-fullcontrol="true"] {
  max-width: 100%;
  width: 100%;
  margin: 0;
  padding: 0;
  max-height: 100%;
}

figure[data-fullcontrol="true"] video {
  height: auto;
}

figure[data-fullcontrol="true"] figcaption {
  display: none;
}

figure[data-fullcontrol="true"] .inline-video__controls {
  position: absolute;
  bottom: 20px;
  width: 100%;
  z-index: 10;
}

figure[data-fullcontrol="false"] .inline-video__close {
  display: none;
}

figure[data-fullcontrol="true"] .inline-video__controls li {
  width: 5%;
}

figure[data-fullcontrol="true"] .inline-video__controls .progress {
  width: 68%;
}

